# CS4803-EML

./: .gitignore  pyproject.toml
p0/: lab0_task1_Tanush_Chopra.ipynb  lab0_task2_Tanush_Chopra.ipynb  lab0_task3_Tanush_Chopra.ipynb
p1/: lab1_task1_Tanush_Chopra.ipynb  lab1_task2_Tanush_Chopra.ipynb  pyproject.toml
p2/: Lab2_Tanush_Chopra.ipynb
p3/: MAKEFILE  README.md  broadcast.py  fsdp.py  fsdp.sh  p3.slurm  p4.slurm  pipeline.py  pipeline.sh  pyproject.toml
p3/results/: part2_broadcast.json  part3_step1__g2.json  part3_step1__g3.json  part3_step1__g4.json  part3_step3__c16_g2.json  part3_step3__c16_g4.json  part3_step3__c4_g2.json  part3_step3__c4_g4.json  part3_step3__c8_g2.json  part3_step3__c8_g4.json  part3_step4__b.json  part3_step4__ub.json  part4__ddp.json  part4__fdsp.json
p4/: Lab_task1_template.ipynb  Lab_task2_template.ipynb  Lab_task3_template.ipynb  pyproject.toml
p4/results/: task1_step2__full.csv  task1_step2__summary.csv  task1_step5__memory.csv  task2_step3__sink.csv  task3_step3__results.csv
